--- a/roles/grok/tasks/main.yml
+++ b/roles/grok/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
 # tasks file for grok
-- name: Download grok_exporter archive
+- name: Download grok_exporter
   get_url:
-    url: https://github.com/fstab/grok_exporter/releases/download/v1.0.0.RC5/grok_exporter-1.0.0.RC5.linux-amd64.zip
+    url: https://artifactory.ing.net:443/artifactory/releases_generic_global-pega-platform-repo/Infra/tenants/grok_exporter-1.0.0.RC5.linux-amd64.zip
     dest: /tmp/grok_exporter-1.0.0.RC5.linux-amd64.zip
 
 - name: Unzip grok_exporter archive
