--- a/roles/grok/tasks/main.yml
+++ b/roles/grok/tasks/main.yml
@@ -25,6 +25,8 @@
   file:
     path: "/etc/grok_exporter"
     state: directory
+    owner: root
+    group: root
   
 - name: Copy grok patterns to /etc/grok_exporter
   copy:
